test/samples/error/err_invalid_type_args.w
func foo(x:float,y:int,c:Boolean):int { }