test/samples/error/err_invalid_type_args.output
error: line 1:25 invalid syntax: no viable alternative at input 'Boolean'